force-app/main/default/objects/Misr_Radiology_Service__mdt/Misr_Radiology_Service__mdt.object-meta.xml
<CustomObject>
    <description>Diagnostic radiology service definitions and commission rates for Misr Radiology Center.</description>
    <label>Misr Radiology Service</label>
    <pluralLabel>Misr Radiology Services</pluralLabel>
</CustomObject>