force-app/main/default/objects/Misr_Radiology_Service__mdt/fields/Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Commission_Rate__c</fullName>
    <description>Misr Radiology service configuration.</description>
    <label>Commission Rate</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>