force-app/main/default/objects/Misr_Radiology_Service__mdt/fields/Service_Key__c.field-meta.xml
<CustomField>
    <fullName>Service_Key__c</fullName>
    <description>Misr Radiology service configuration.</description>
    <label>Service Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>