force-app/main/default/objects/Misr_Radiology_Service__mdt/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>Misr Radiology service configuration.</description>
    <label>Sort Order</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>